增加了视频播放器控制动画和点击事件

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,8 @@
 
     </style>
 
+    <style name="AppThemeProgress">
+        <item name="colorAccent">@color/colorDialogLine</item> <!-- Whatever color you want-->
+    </style>
+
 </resources>
