增加了倍速播放、旋转、视频镜像、视频比例切换、后台播放、旋转、下载缓存功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -157,6 +157,13 @@
                     android:theme="@style/AppThemeProgress" />
         </LinearLayout>
 
+        <com.demo.videotest.widget.PlayConfigView
+                android:id="@+id/config_view"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:visibility="gone"/>
+
     </FrameLayout>
 
 </RelativeLayout>
