--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,13 @@
                     android:id="@+id/video_texture_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center" />
+                    android:layout_gravity="center"/>
+
+            <master.flame.danmaku.ui.widget.DanmakuView
+                    android:id="@+id/danmaku_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
         </FrameLayout>
 
         <com.demo.videotest.widget.MediaController
@@ -35,7 +41,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/play_player" />
+                    android:src="@drawable/play_player"/>
 
             <LinearLayout
                     android:layout_width="match_parent"
@@ -54,7 +60,7 @@
                         android:paddingStart="4dip"
                         android:textColor="@android:color/white"
                         android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                 <SeekBar
                         android:id="@+id/controller_progress_bar"
@@ -63,7 +69,7 @@
                         android:layout_height="32dip"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentRight="true"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"/>
 
                 <TextView
                         android:id="@+id/controller_end_time"
@@ -75,7 +81,7 @@
                         android:paddingStart="4dip"
                         android:textColor="@android:color/white"
                         android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"/>
 
                 <ImageButton
                         android:id="@+id/full_screen_image"
@@ -85,7 +91,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:background="@android:color/transparent"
-                        android:src="@drawable/full_screen" />
+                        android:src="@drawable/full_screen"/>
             </LinearLayout>
 
             <LinearLayout
@@ -126,13 +132,6 @@
 
         </com.demo.videotest.widget.MediaController>
 
-        <ImageView
-                android:id="@+id/cover_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop" />
-
         <ImageButton
                 android:id="@+id/cover_stop_play"
                 android:layout_width="wrap_content"
@@ -140,7 +139,7 @@
                 android:layout_gravity="center"
                 android:background="@android:color/transparent"
                 android:clickable="false"
-                android:src="@drawable/play_player" />
+                android:src="@drawable/play_player"/>
 
         <LinearLayout
                 android:id="@+id/loading_view"
@@ -154,9 +153,15 @@
             <ProgressBar
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:theme="@style/AppThemeProgress" />
+                    android:theme="@style/AppThemeProgress"/>
         </LinearLayout>
 
+        <ImageView
+                android:id="@+id/cover_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"/>
         <com.demo.videotest.widget.PlayConfigView
                 android:id="@+id/config_view"
                 android:layout_width="wrap_content"
